Tweak confirmation width and fix high-contrast

--- a/assets/css/_govuk_tweaks.scss
+++ b/assets/css/_govuk_tweaks.scss
@@ -31,7 +31,7 @@ body:not(.js-enabled) {
 }
 
 #cookie-page-form .govuk-notification-banner {
-    max-width: 500px;
+    max-width: 710px;
 }
 
 // Contrast fixes.
@@ -46,7 +46,7 @@ body.contrast-high {
         &, &.govuk-notification-banner--success {
             background-color: #eeeeee;
             border-color: #eeeeee;
-            .govuk-notification-banner-title {
+            .govuk-notification-banner__title {
                 color: black;
             }
             .govuk-notification-banner__link {
